updated teams and such

--- a/public/team.html
+++ b/public/team.html
@@ -111,16 +111,16 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Andrew Tolton.jpg" alt="Avatar">
+              <img src="Images/tutors/Andrew-Tolton.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Andrew Tolton</h1> 
               <p>
                 Halola! My name is Andrew, and I am from Syracuse, Utah. I am currently a Mechanical Engineering and Computer Science 
-                undergrad at the University of Utah. I'm participating in the Utah Students Robotics club, and like to get involved 
+                undergrad at the University of Utah. I'm participating in the Utah Students Robotics club and like to get involved 
                 with a lot of the different happenings around campus. I enjoy soccer and rock climbing, and I love to come 
-                up with games and projects to share with the people around me. I also deeply enjoy the process of learning, 
-                and love to figure out difficult things with others. I look forward to problem-solving solving together!
+                up with games and projects to share with the people around me. I also deeply enjoy the process of learning 
+                and love to figure out difficult things with others. I look forward to problem-solving together!
               </p>
             </div>
           </div>
@@ -128,7 +128,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Daniel Griffin.jpg" alt="Avatar">
+              <img src="Images/tutors/Daniel-Griffin.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Daniel Griffin</h1> 
@@ -147,7 +147,7 @@
         <!-- <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Erin Morgan.jpeg" alt="Avatar">
+              <img src="Images/tutors/Erin-Morgan.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Erin Morgan</h1> 
@@ -160,13 +160,13 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Mohamad Elgendy.jpg" alt="Avatar">
+              <img src="Images/tutors/Mohamad-Elgendy.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Mohamad Elgendy</h1> 
               <p>I'm originally from Cairo, Egypt and am a student at the University of Utah.
-                I'm studying computer science and when I graduate I want to be a software engineer.
-                In my free time you'll find me at the gym working out or relaxing and playing video games.
+                I'm studying computer science, and when I graduate, I want to be a software engineer.
+                In my free time, you'll find me at the gym working out or relaxing and playing video games.
               </p>
             </div>
           </div>
@@ -174,16 +174,15 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Ocean Armstrong.jpg" alt="Avatar">
+              <img src="Images/tutors/Ocean-Armstrong.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Ocean Armstrong</h1> 
-              <p>I'm from the Salt Lake City area of Utah. I'm studing mechanical engineering at 
+              <p>I'm from the Salt Lake City, Utah. I'm studing mechanical engineering at 
                 the University of Utah with a minor in mathematics (I just switched).
                 I'm hoping to focus on a field in aerodynamics. I love plaing video games on 
-                my switch and pc, hanginf with my little sister, playing chess, and reading books 
-                comics. I'm a tutor because I love helping others to understand math and have 
-                done it many different ways throughout the years.
+                my Switch and PC, hanging with my little sister, playing chess, and reading comic books . 
+                I tutor because I love helping others understand math.
               </p>
             </div>
           </div>
@@ -191,7 +190,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Sam Nelson.jpeg" alt="Avatar">
+              <img src="Images/tutors/Sam-Nelson.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Sam Nelson</h1> 
@@ -207,7 +206,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/Natalie White.jpg" alt="Avatar">
+              <img src="Images/tutors/Natalie-White.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
               <h1>Natalie White</h1> 
@@ -230,7 +229,7 @@
 
         <div class="corporate-grid">
           <div class="photo">
-            <img src="Images/tutors/Duncan Morais.jpg" alt="Duncan Morais">
+            <img src="Images/tutors/Duncan-Morais.jpg" alt="Duncan Morais">
           </div>
           <div class="description">
             <h1>Duncan Morais</h1>
@@ -242,7 +241,7 @@
             </p>
           </div>
           <div class="photo">
-            <img src="Images/tutors/Matthew Wilkinson.jpg" alt="Matthew Wilkinson">
+            <img src="Images/tutors/Matthew-Wilkinson.jpg" alt="Matthew Wilkinson">
           </div>
           <div class="description">
             <h1>Matthew Wilkinson</h1>
