--- a/public/why.html
+++ b/public/why.html
@@ -120,16 +120,16 @@
         <!-- <p class="date">December 13, 2021</p> -->
         <h2>Revolutionizing education</h2>
         <p>
-          After years of working in the tutoring industry at various companies and privately tutoring, we wanted to make something revolutionary. First we wanted
+          After years of working in the tutoring industry at various companies and privately tutoring, we wanted to make something revolutionary. We wanted
           to truly break down what we are teaching. With years of experience, we have spent hundreds of hours pouring over our curriculum
           to make sure it is the best in the world. But what truly separates us from the pack is that we are bringing education
-          into the 21st century. The way to do that is through data and we call it adaptive learning intelligence.
+          into the 21st century. The way to do that is through data, and we call it Adaptive Learning Intelligence.
         </p>
         <p>
           <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; every test they take, every worksheet they complete,
           every lesson we cover will be saved and will affect every step your student takes through our truly custom programs. This is why we have spent thousands of hours developing 
           state-of-the-art software to help your student succeed. The only way to enter the future of education is to use the tools of the future. Our tutors have this technology at 
-          their fingers tips, and they are eager to help your student reach their dreams.
+          their finger tips, and they are eager to help your student reach their dreams.
         </p>
         <div class="quote-card">
           <p>"The only way to enter the future of education is to use the tools of the future."</p>
