--- a/public/act-sign-up.html
+++ b/public/act-sign-up.html
@@ -177,6 +177,9 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="discounts">
       <div class="discount-wrapper">
         <label for="firstSessionDiscount">First Session Free?</label>
         <input type="checkbox" id="firstSessionDiscount" onchange="firstSessionFreeCallback(event)">
