--- a/email-templates/reservation.html
+++ b/email-templates/reservation.html
@@ -20,7 +20,7 @@
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Your program has been reserved</h2>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             You are reserving our ${programDetails.programLength} week ${programDetails.name} program which 
-            <a href="guarantee.html" target="_blank">guarantees</a> a 
+            <a href="https://lyrnwithus.com/guarantee.html">guarantees</a> a 
             ${programDetails.score} point increase on the ACT. This program will start ${convertFromDateInt(firstDay.getTime()).shortReadable}
             and continue every ${days[programDetails.dayIndexes.sort()[0]]} and ${days[programDetails.dayIndexes.sort()[1]]}
             until ${convertFromDateInt(lastDay.getTime()).shortReadable}. Lessons will start at 
