--- a/public/pricing.html
+++ b/public/pricing.html
@@ -151,20 +151,20 @@
         <div class="contact-form">
           <div class="parent">
             <h5>Parent Info</h5>
-            <label for="parent-firstName" class="placeholder">Parent First Name*</label>
+            <label for="parent-firstName" class="placeholder">Parent First Name</label>
             <input id="parent-firstName" type="text" onfocusout="contactInfoFocusOutCallback(event)" required>
-            <label for="parent-lastName" class="placeholder">Parent Last Name*</label>
+            <label for="parent-lastName" class="placeholder">Parent Last Name</label>
             <input id="parent-lastName" type="text" onfocusout="contactInfoFocusOutCallback(event)" required>
-            <label for="parent-email" class="placeholder">Parent Email*</label>
+            <label for="parent-email" class="placeholder">Parent Email</label>
             <input id="parent-email" type="email" onfocusout="contactInfoFocusOutCallback(event)" required>
           </div>
           <div class="student">
             <h5>Student Info</h5>
-            <label for="student-firstName" class="placeholder">Student First Name*</label>
+            <label for="student-firstName" class="placeholder">Student First Name</label>
             <input id="student-firstName" type="text" onfocusout="contactInfoFocusOutCallback(event)" required>
-            <label for="student-lastName" class="placeholder">Student Last Name*</label>
+            <label for="student-lastName" class="placeholder">Student Last Name</label>
             <input id="student-lastName" type="text" onfocusout="contactInfoFocusOutCallback(event)" required>
-            <label for="student-email" class="placeholder">Student Email</label>
+            <label for="student-email" class="placeholder">Student Email (optional)</label>
             <input id="student-email" type="email" onfocusout="contactInfoFocusOutCallback(event)">
           </div>
         </div>
@@ -176,36 +176,6 @@
     </div>
 
     <main>
-      <!-- <section class="intro">
-        <h1>Simple, easy pricing</h1>
-        <h2>Select the perfect course and see our pricing</h2>
-      </section>
-      <section class="courses">
-        <h2>OUR COURSES</h2>
-        <div class="course-wrapper">
-          <div class="course-block"> -->
-            <!-- <div class="course-card blueish" onclick="openCourse('act')"> -->
-              <!-- <div class="course-card" onclick="openCourse('act')">
-              <h2>ACT PREP</h2>
-            </div>
-            <h3>Score your ACT Goal</h3> -->
-            <!-- <p>Sign up to get one on one tutoring from Lyrn's ACT certified tutors. Students recieve a full length ACT preliminary package, which includes the official ACT test,
-              1 hour post test review, and a college readiness conference. Tutors and student will set a goal together and over the course of our custom courses, will use Lyrn's Adaptive Learning 
-              Technology to meet the goal.
-            </p> -->
-          <!-- </div>
-          <div class="course-block">
-            <div class="course-card" onclick="openCourse('subjectTutoring')">
-              <h2>SUBJECT TUTORING</h2>
-            </div>
-            <h3>Any homework, we can help</h3> -->
-            <!-- <p>Whether you're in a rut and can't seem to get that biology assignment finished or you feel like you're falling behind in math, Lyrn Tutoring can help you finish your homework feeling
-              confident. Tutors and students will make goals together and will help the student complete homework until grade or missing assignment goals are met.
-            </p> -->
-          <!-- </div>
-        </div>
-      </section> -->
-
       <input type="radio" name="course-selection" id="act-section" checked>
       <input type="radio" name="course-selection" id="subjectTutoring-section">
       <section class="nav">
@@ -219,8 +189,8 @@
         </div>
 
         <div class="practice-test-wrapper">
-          <h2>Free full length ACT practice test</h2>
-          <p>Not sure how many points you need to go up? Take a <strong>free</strong> full length ACT test and get your results back immediately.</p>
+          <h2>2 free full length ACT practice tests</h2>
+          <p>Not sure how many points you need to go up? Take two <strong>free</strong> full length ACT test and get your results back immediately.</p>
           <div class="flex-row">
             <input type="email" placeholder="email">
             <button>Submit</button>
