--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -72,10 +72,10 @@
     <!-- <h1 id="studentName"></h1> -->
     <div class="content">
       <div class="next-lesson-wrapper box">
-        <h2>Your next lesson is <span id="nextLessonDetails"></span></h2>
+        <h2 id="nextLessonDetails"></h2>
       </div>
       <div class="section-assignment-wrapper">
-        <h3>Homework Assignment</h3>
+        <h3>Homework Assignments</h3>
         <div id="sectionAssignmentList"></div>
       </div>
       <div class="previous-assignment-wrapper">
