fixed plural tests

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -190,7 +190,7 @@
 
         <div class="practice-test-wrapper">
           <h2>2 free full length ACT practice tests</h2>
-          <p>Not sure how many points you need to go up? Take two <strong>free</strong> full length ACT test and get your results back immediately.</p>
+          <p>Not sure how many points you need to go up? Take two <strong>free</strong> full length ACT tests and get your results back immediately.</p>
           <div class="flex-row">
             <input type="email" placeholder="email">
             <button>Submit</button>
