--- a/public/team.html
+++ b/public/team.html
@@ -218,7 +218,25 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/Eric-Montenegro.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>Eric Montenegro</h1> 
+              <p>
+                I am Utah native studying Mechanical Engineering at the University of Utah. 
+                I love to take advantage of the beautiful outdoors we have here in Utah by skiing, 
+                hiking, camping, and boating, but that doesn't mean you won't find me looking for a new café 
+                for brunch on a quiet Saturday. I love learning new things, like photography and Italian. 
+                As Gandhi said, “Live as if you were to die tomorrow. Learn as if you were to live forever.”
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
+      
 
       <section class="content">
         <h2>The people behind the scenes</h2>
