--- a/public/team.html
+++ b/public/team.html
@@ -235,6 +235,21 @@
             </div>
           </div>
         </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/ELiza-Sullivan.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>ELiza Sullivan</h1> 
+              <p>
+                Hi! I'm Eliza, and I'm from San Diego, California. I'm currently at the University of Utah studying computer engineering, 
+                and I plan to start a tech company once I graduate. I love to read, watch movies, and spend time with my friends. 
+                I also love English, and I can't wait to help you like it too!
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       
 
