--- a/public/team.html
+++ b/public/team.html
@@ -238,14 +238,31 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="Images/tutors/ELiza-Sullivan.jpg" alt="Avatar">
+              <img src="Images/tutors/Eliza-Sullivan.jpg" alt="Avatar">
             </div>
             <div class="flip-card-back">
-              <h1>ELiza Sullivan</h1> 
+              <h1>Eliza Sullivan</h1> 
               <p>
                 Hi! I'm Eliza, and I'm from San Diego, California. I'm currently at the University of Utah studying computer engineering, 
                 and I plan to start a tech company once I graduate. I love to read, watch movies, and spend time with my friends. 
                 I also love English, and I can't wait to help you like it too!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="Images/tutors/Dallen-Unruh.jpg" alt="Avatar">
+            </div>
+            <div class="flip-card-back">
+              <h1>Dallen Unruh</h1> 
+              <p>
+                I am from Salt Lake City and am currently attending the University of Utah studying mechanical engineering. 
+                The focus of my studies are robotics and control. Although I would like to work in the automobile or aerospace industries, 
+                I know I will love any job I get as an engineer. I love tutoring math and have done it  for almost 3 years to students of all ages. 
+                Other passions of mine include skiing, hiking, backpacking, mountain biking, off-roading, and hacky-sacking with my friends. 
+                I am looking forward to meeting you!
               </p>
             </div>
           </div>
